[project]
name = "pii-filter"
version = "0.1.0"
description = "PII detection and masking pipeline for Keeper AI Gateway (OpenWebUI Pipelines)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Keeper Solutions AI Lab" }]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["."]
extend-exclude = ["docs/references"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["pii_filter.py", "tests"]

# Pipelines container provides `schemas` module at runtime; not available locally.
[[tool.mypy.overrides]]
module = "schemas"
ignore_missing_imports = true

# asyncpg ships no py.typed marker as of 0.31; its public callables surface
# as Any under mypy --strict. Treat the import as untyped so we can use
# explicit `cast(...)` at the boundary instead of polluting every line with
# # type: ignore comments.
[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

# pytest-postgresql factories return loosely-typed fixtures; same handling.
[[tool.mypy.overrides]]
module = "pytest_postgresql.*"
ignore_missing_imports = true

# Task 11: google-cloud-secret-manager is lazy-imported only in the
# `gcp_kms` KeyManager branch and is deliberately NOT in the default
# container deps (heavy grpc/protobuf chain — added to the prod image by
# Senka). Treat the missing import as untyped so mypy --strict passes
# without the package installed locally.
[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

# gliner2 ships no type stubs; treat the import as untyped so mypy --strict
# passes without the package installed locally (same handling as asyncpg /
# schemas / google.cloud above).
[[tool.mypy.overrides]]
module = "gliner2"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short -m 'not benchmark'"
markers = [
    "benchmark: opt-in latency/performance tests (run with -m benchmark)",
]